[project]
name = "py-executor"
version = "0.1.0"
description = "MCP server for executing Python code snippets with batch parallel execution support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Pawel" }]
keywords = ["mcp", "python", "executor", "batch", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/neco001/py_executor"
Repository = "https://github.com/neco001/py_executor"
Issues = "https://github.com/neco001/py_executor/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
